--- a/src/main/webapp/WEB-INF/views/people/index.html
+++ b/src/main/webapp/WEB-INF/views/people/index.html
@@ -11,6 +11,7 @@
 <div th:each="person : ${people}">
   <a th:href="@{/people/{id}(id=${person.getId()})}" th:text="${person.getName()}">user</a>
   <a th:href="@{/people/{id}(id=${person.getId()})}" th:text="${person.getAge()}">user</a>
+  <a th:href="@{/people/{id}(id=${person.getId()})}" th:text="${person.getEmail()}">user</a>
 </div>
 </body>
 </html>
