--- a/src/main/webapp/WEB-INF/views/people/show.html
+++ b/src/main/webapp/WEB-INF/views/people/show.html
@@ -7,6 +7,7 @@
 <body>
 <p th:text="${person.getName() + ', ' + person.getAge()}"></p>
 <p th:text="${person.getId()}"></p>
+<p th:text="${person.getEmail()}"></p>
 
 <a th:href="@{/people/{id}/edit(id=${person.getId()})}">Edit</a>
 <br>
