added date of birth

--- a/src/main/webapp/WEB-INF/views/people/index.html
+++ b/src/main/webapp/WEB-INF/views/people/index.html
@@ -12,6 +12,7 @@
   <a th:href="@{/people/{id}(id=${person.getId()})}" th:text="${person.getName()}">user</a>
   <a th:href="@{/people/{id}(id=${person.getId()})}" th:text="${person.getAge()}">user</a>
   <a th:href="@{/people/{id}(id=${person.getId()})}" th:text="${person.getEmail()}">user</a>
+  <a th:href="@{/people/{id}(id=${person.getDateOfBirth()})}" th:text="${person.getDateOfBirth}">user</a>
 </div>
 </body>
 </html>
