--- a/src/main/webapp/WEB-INF/views/people/new.html
+++ b/src/main/webapp/WEB-INF/views/people/new.html
@@ -11,13 +11,20 @@
   <input type="text" th:field="*{name}" id="name"/>
   <div style="color:red" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Name error</div>
   <br>
+
   <label for="name">Age:</label>
   <input type="text" th:field="*{age}" id="age"/>
   <div style="color:red" th:if="${#fields.hasErrors('age')}" th:errors="*{age}">Age error</div>
   <br>
+
   <label for="name">Enter email:</label>
   <input type="text" th:field="*{email}" id="email"/>
   <div style="color:red" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Email error</div>
+  <br>
+
+  <label for="date_of_birth">Enter date of birth (dd/mm/yyyy):</label>
+  <input type="text" th:field="*{dateOfBirth}" id="date_of_birth"/>
+  <div style="color:red" th:if="${#fields.hasErrors('dateOfBirth')}" th:errors="*{dateOfBirth}">Date of birth error</div>
   <br>
   <input type="submit" value="Create!"/>
 </form>
